fix(oblique/styles): add high `z-index` to `ob-tab-focus-border` to ensure border isn't covered
OUI-2278

--- a/projects/oblique/src/styles/scss/core/mixins/_shadow.scss
+++ b/projects/oblique/src/styles/scss/core/mixins/_shadow.scss
@@ -34,6 +34,7 @@ $tab-focus-width: 3px;
 	border: $tab-focus-width solid $tab-focus-color;
 	box-shadow: none;
 	outline: none;
+	z-index: variables.$ob-z-index-layout;
 }
 
 @mixin ob-inner-bottom-shadow() {
